test_data/neg/ss/655289/Windows/655289.diso.rtf
#AUCpreD: order/disorder state prediction results by profile mode 
#Disorder residues are marked with asterisks (*) above threshold 0.500 
# Ordered residues are marked with dots (.) below threshold 0.500 
   1 M * 0.856 
   2 Q . 0.117 
   3 Y . 0.035 
   4 A . 0.020 
   5 F . 0.016 
   6 S . 0.015 
   7 F . 0.014 
   8 S . 0.013 
   9 F . 0.013 
  10 W . 0.012 
  11 A . 0.012 
  12 D . 0.012 
  13 I . 0.012 
  14 E . 0.012 
  15 Y . 0.012 
  16 P . 0.012 
  17 S . 0.012 
  18 F . 0.013 
  19 A . 0.013 
  20 C . 0.013 
  21 S . 0.013 
  22 S . 0.012 
  23 V . 0.012 
  24 E . 0.012 
  25 T . 0.012 
  26 L . 0.011 
  27 T . 0.011 
  28 Y . 0.011 
  29 I . 0.011 
  30 P . 0.011 
  31 T . 0.011 
  32 F . 0.011 
  33 F . 0.011 
  34 G . 0.011 
  35 V . 0.011 
  36 F . 0.011 
  37 S . 0.011 
  38 S . 0.011 
  39 I . 0.011 
  40 K . 0.011 
  41 F . 0.011 
  42 M . 0.011 
  43 I . 0.011 
  44 I . 0.011 
  45 Y . 0.011 
  46 P . 0.011 
  47 P . 0.012 
  48 F . 0.013 
  49 L . 0.014 
  50 E . 0.014 
  51 T . 0.015 
  52 Y . 0.015 
  53 V . 0.016 
  54 L . 0.018 
  55 F . 0.025 
  56 S . 0.078 
  57 G * 0.693 
